# molmoact

./: .gitignore  Dockerfile  README.md  build_gripper_triplets.py  pyproject.toml
experiments/libero/: client.py  libero_utils.py  molmoact.py  prepare_egl_env.sh  robot_utils.py  run_libero_eval.py  run_libero_eval_vllm.py  sample_demos.py  server.py
launch_scripts/: eval.py  eval_downstream.py  train_captioner.py  train_multitask_model.py  utils.py
olmo/: config.py  exceptions.py  html_utils.py  io.py  safetensors_util.py  tokenizer.py  torch_util.py  util.py
olmo/data/: academic_datasets.py  academic_datasets_manual.py  data_loader.py  dataset.py  download_urls.py  dynamic_packer.py  get_dataset.py  image_preprocessor.py  interleaved_text_preprocessor.py  iterable_dataset_mixture.py  lvis_dataset.py  pixmo_datasets.py  robot_datasets.py
olmo/eval/: api_utils.py  evaluators.py  inf_evaluator.py  loss_evaluator.py  math_vista_utils.py  mmmu_eval_utils.py  save_eval_data_config.py  vqa.py
olmo/hf_datasets/: README  a_okvqa.py  ai2d.py  android_control.py  android_control_utils.py  clock_bench.py  count_qa.py  dv_qa.py  figure_qa.py  plot_qa.py  tabmwp.py  tally_qa.py  vqa_v2.py
olmo/hf_model/molmoact/: configuration_molmoact.py  convert_molmoact_to_hf.py  custom_tokenizer.py  (+4 more)
olmo/models/: model.py  model_config.py
olmo/nn/: beam_search.py  image_vit.py  legacy_config.py  llm.py  vision_backbone.py
olmo/train/: checkpointer.py  distributed_checkpointing.py  optim.py  remote_filesystem.py  trainer.py  trainer_config.py
scripts/: build_submission_file.py  calculate_params.py  compare_weights.py  convert_hf_to_molmo.py  convert_to_unsharded.py  dataset_visualize.py  download_data.py  download_robot_data.py  generate.py  global_stats.py  gradio_portal.py  merge_lora.py  mm_eval.py  parquet_trace_portal.py  train.py  unshard_ckpt.py
(+6 files in other folders)
